[package]
name = "my-redis-tokio"
version = "0.1.0"
authors = ["Moazzam Adil Khan <moaadi3890@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mini-redis = "0.2.0"
tokio = { version = "0.2", features = ["full"] }